lib/src/compiler/tests/testdata/errors/81.out
error[E001]: syntax error
 --> line:3:18
  |
3 |   $a = { 00 ( 00 }
  |                  ^ expecting `[`, BYTE, `(`, `|` or `)`, found `}`
  |